# gpu-screen-recorder-fork

./: .gitignore  88-gsr-coolbits.conf  README.md  TODO  build.sh  debug-install.sh  debug.sh  flake.nix  install.sh  install_coolbits.sh  install_ubuntu.sh  install_ubuntu_amd.sh  install_ubuntu_intel.sh  install_ubuntu_nvidia.sh  meson.build  meson_options.txt  project.conf  uninstall.sh
extra/: gpu-screen-recorder.env  gpu-screen-recorder.service  install_coolbits.sh  install_preserve_video_memory.sh  meson_post_install.sh
include/: color_conversion.h  cuda.h  cursor.h  damage.h  dbus.h  defs.h  egl.h  pipewire.h  pipewire_audio.h  shader.h  sound.hpp  utils.h  vaapi.h  xnvctrl.h
include/capture/: capture.h  kms.h  kms_cuda.h  kms_software.h  kms_vaapi.h  nvfbc.h  portal.h  xcomposite.h  xcomposite_cuda.h  xcomposite_software.h  xcomposite_vaapi.h
include/codec_query/: codec_query.h  cuda.h
include/encoder/video/: cuda.h  software.h  vaapi.h  video.h
include/kms/: kms_client.h
kms/: kms_shared.h
kms/client/: kms_client.c  kms_client.h
kms/server/: kms_server.c  project.conf
scripts/: record-application-name.sh  record-save-application-name.sh  replay-application-name.sh  replay.sh  save-replay.sh  start-recording.sh  start-replay.sh  start-stop-recording.sh  toggle-recording-selected.sh  twitch-stream-local-copy.sh  twitch-stream.sh  youtube-hls-stream.sh
src/: color_conversion.c  cuda.c  cursor.c  damage.c  dbus.c  egl.c  main.cpp  overclock.c  pipewire.c  pipewire_audio.c  pipewire_video.c  shader.c  sound.cpp  utils.c  vaapi.c  window_texture.c  xnvctrl.c
src/capture/: capture.c  kms.c  kms_cuda.c  kms_software.c  kms_vaapi.c  nvfbc.c  portal.c  xcomposite.c  xcomposite_cuda.c  xcomposite_drm.c  xcomposite_software.c  xcomposite_vaapi.c
src/codec_query/: cuda.c  vaapi.c  vulkan.c
src/encoder/video/: cuda.c  nvenc.c  software.c  vaapi.c  video.c  vulkan.c
src/kms/: kms_client.c  kms_server.c
src/window/: window_wayland.c
study/: create_matrix.py
